add Update group endpoint
