# api/routers.go
@@ -149,6 +149,12 @@ var routes = map[string]Route{"Index": {"GET", "/", false, Index}, "Login": {
 		true,
 		admin.CreateGroup,
 	},
+	"UpdateGroup": {
+		strings.ToUpper("Put"),
+		"/rks/v1/group/{groupname:[a-zA-Z0-9\\-]{1,64}}",
+		true,
+		admin.UpdateGroup,
+	},
 	"CreateSecret": {
 		strings.ToUpper("Post"),
 		"/rks/v1/secret/{fqdn}",
